--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">Convert</string>
+
+    <string-array name="convert_option">
+        <item>°C to °F</item>
+        <item>°C to °K</item>
+        <item>°F to °C</item>
+        <item>°F to °K</item>
+        <item>°K to °C</item>
+        <item>°K to °F</item>
+    </string-array>
+
 </resources>
